# Slowfetch

./: .gitignore  Cargo.toml  README.md  SlowfetchV2 plan.txt  flake.nix
src/: asciimodule.rs  cache.rs  config.toml  configloader.rs  coremodules.rs  fontmodule.rs  hardwaremodules.rs  helpers.rs  image.rs  imagerender.rs  main.rs  renderer.rs  terminalsize.rs  userspacemodules.rs
src/assets/: arch.txt  archsmol.txt  cachy.txt  cachyos.txt  cachysmol.txt  fedora.txt  fedorasmol.txt  nix.txt  nixmeme.txt  nixsmol.txt  slowfetchnarrowold.txt  ubuntu.txt  ubuntusmol.txt
src/assets/default/: medium.txt  narrow.txt  wide.txt
src/modules/: asciimodule.rs  coremodules.rs  fontmodule.rs  hardwaremodules.rs  mod.rs  userspacemodules.rs
