[package]
name = "slowfetch"
version = "0.2.1"
edition = "2024"

[profile.release]
opt-level = 3
lto = true  # Link Time Optimization
debug = false
codegen-units = 1  # Reduce the number of codegen units for more optimization
panic = "abort"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
inkline = "1.0"
tintify = "1.0"